Fix bug causing all cells to have nowrap

--- a/src/fixedHeaderTable.less
+++ b/src/fixedHeaderTable.less
@@ -10,7 +10,7 @@
   }
   .ui.table {
     border: none;
-    td, th {
+    th {
       white-space: nowrap;
     }
   }
